--- a/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/ambassador.yaml
+++ b/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/ambassador.yaml
@@ -5,7 +5,11 @@
 apiVersion: getambassador.io/v3alpha1
 kind: Mapping
 metadata:
-  name:  {{ include ".Chart.Name .fullname" $ }}-mapping
+  {{- if .name }}
+  name: {{ .name }}
+  {{- else }}
+  name: {{ include ".Chart.Name .fullname" $ }}-mapping
+  {{- end }}
   labels:
     app: {{ template ".Chart.Name .name" $ }}
     chart: {{ template ".Chart.Name .chart" $ }}
