--- a/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/hpa.yaml
+++ b/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/hpa.yaml
@@ -8,7 +8,11 @@ apiVersion: autoscaling/v2beta1
 {{- end }}
 kind: HorizontalPodAutoscaler
 metadata:
+  {{- if $.Values.autoscaling.name }}
+  name: {{ $.Values.autoscaling.name }}
+  {{- else }}
   name: {{ template ".Chart.Name .fullname" $ }}-hpa
+  {{- end }}
   {{- if .Values.autoscaling.annotations }}
   annotations:
 {{ toYaml .Values.autoscaling.annotations | indent 4 }}
