--- a/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/test_values.yaml
+++ b/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/test_values.yaml
@@ -6,8 +6,10 @@ kedaAutoscaling:
 ambassadorMapping:
   enabled: true
 istio:
-  enabled: true
+  enable: true
   gateway:
+    enabled: true
+  virtualService:
     enabled: true
 appLabels: 
       test: thyjhgfv
