--- a/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/ingress.yaml
+++ b/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/ingress.yaml
@@ -21,7 +21,11 @@ apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
+  {{- if $.Values.ingress.name }}
+  name: {{ $.Values.ingress.name }}
+  {{- else }}
   name: {{ template ".Chart.Name .fullname" . }}-ingress
+  {{- end }}
   namespace: {{ $.Values.NameSpace }}
   labels:
     appId: {{ $.Values.app | quote }}
