--- a/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/poddisruptionbudget.yaml
+++ b/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/poddisruptionbudget.yaml
@@ -6,7 +6,11 @@ apiVersion: policy/v1beta1
 {{- end }}
 kind: PodDisruptionBudget
 metadata:
+  {{- if .Values.podDisruptionBudget.name }}
+  name: {{ .Values.podDisruptionBudget.name }}
+  {{- else }}
   name: {{ include ".Chart.Name .fullname" $ }}
+  {{- end }}
   labels:
     appId: {{ $.Values.app | quote }}
     envId: {{ $.Values.env | quote }}
