--- a/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/servicemonitor.yaml
+++ b/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/servicemonitor.yaml
@@ -4,7 +4,11 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
+  {{- if .Values.servicemonitor.name }}
+  name: {{ .Values.servicemonitor.name }}
+  {{- else }}
   name: {{ template ".Chart.Name .fullname" . }}-sm
+  {{- end }}
   labels:
     kind: Prometheus
     appId: {{ $.Values.app | quote }}
