--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -77,3 +77,4 @@ redirects:
     global-configurations/api-token: user-guide/global-configurations/authorization/api-tokens.md
     user-guide/creating-application/workflow/ci-pipeline2: user-guide/creating-application/workflow/ci-pipeline.md
     user-guide/clusters: user-guide/resource-browser.md
+    usage/clusters: user-guide/resource-browser.md
