updated chart version to 5-1-1 & updated yamls for custom service name

--- a/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/ingress.yaml
+++ b/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/ingress.yaml
@@ -110,7 +110,11 @@ apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
+  {{- if $.Values.ingressInternal.name }}
+  name: {{ $.Values.ingressInternal.name }}
+  {{- else }}
   name: {{ template ".Chart.Name .fullname" . }}-ingress-internal
+  {{- end }}
   namespace: {{ $.Values.NameSpace }}
   labels:
     app: {{ template ".Chart.Name .name" $ }}
