--- a/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/prometheusrules.yaml
+++ b/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/prometheusrules.yaml
@@ -23,7 +23,11 @@ metadata:
 spec:
   {{- with .Values.prometheusRule.rules }}
   groups:
-    - name: {{ template ".Chart.Name .fullname" $ }}
+    {{- if $.Values.prometheusRule.name }}
+    - name: {{ $.Values.prometheusRule.name }}
+    {{- else }}
+    - name: {{ template ".Chart.Name .fullname" . }}
+    {{- end }}
       rules: {{- toYaml . | nindent 6 }}
   {{- end }}
   {{- end }}
