--- a/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/hpa.yaml
+++ b/scripts/devtron-reference-helm-charts/statefulset-chart_5-0-0/templates/hpa.yaml
@@ -30,7 +30,11 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: StatefulSet
+    {{- if .Values.statefulSetConfig.name }}
+    name: {{ .Values.statefulSetConfig.name }}
+    {{- else }}
     name: {{ include ".Chart.Name .fullname" $ }}
+    {{- end }}
   minReplicas: {{ $.Values.autoscaling.MinReplicas  }}
   maxReplicas: {{ $.Values.autoscaling.MaxReplicas }}
   metrics:
