--- a/charts/devtron/templates/devtron.yaml
+++ b/charts/devtron/templates/devtron.yaml
@@ -29,7 +29,10 @@ data:
   IMAGE_SCAN_MAX_RETRIES: "3"
   IMAGE_SCAN_RETRY_DELAY: "5"
   CONSUMER_CONFIG_JSON: '{"DEVTRON-CHART-INSTALL-DURABLE":{"natsMsgProcessingBatchSize":1}}'
-  USE_GIT_CLI : "true"
+  FEATURE_RESTART_WORKLOAD_BATCH_SIZE: "1"
+  FEATURE_RESTART_WORKLOAD_WORKER_POOL_SIZE: "5"
+  USE_GIT_CLI: "false"
+  PROPAGATE_EXTRA_LABELS: "false"
 {{- if $.Values.configs }}
 {{- if or ($.Values.minio.enabled) ($.Values.configs.BLOB_STORAGE_PROVIDER) }}
   BLOB_STORAGE_ENABLED: "true"
