--- a/charts/devtron/templates/devtron.yaml
+++ b/charts/devtron/templates/devtron.yaml
@@ -21,6 +21,70 @@ data:
   APP_SYNC_IMAGE: {{ include "common.image" (dict "component" $.Values.components.chartSync "global" $.Values.global ) }}
 {{- if $.Values.installer.modules }}
 {{- if has "cicd" $.Values.installer.modules }}
+  CD_HOST: "argocd-server.devtroncd"
+  CD_PORT: "80" 
+  CD_NAMESPACE: "devtroncd"
+  EVENT_URL: "http://notifier-service.devtroncd:80/notify"
+  GIT_SENSOR_URL: "http://git-sensor-service.devtroncd:80"
+  GIT_SENSOR_TIMEOUT: "300"
+  LENS_URL: "http://lens-service.devtroncd:80"
+  CASBIN_CLIENT_URL: casbin-service.devtroncd:9000
+  LENS_TIMEOUT: "300"
+  NATS_SERVER_HOST: "nats://devtron-nats.devtroncd:4222"
+  APP: "orchestrator"
+  PG_LOG_QUERY: "true"
+  LOG_LEVEL: "0"
+  GIT_WORKING_DIRECTORY: "/tmp/gitops/"
+  ACD_URL: "argocd-server.devtroncd"
+  ACD_USER: "admin"
+  ACD_TIMEOUT: "300"
+  ACD_SKIP_VERIFY: "true"
+  MODE: "PROD" 
+  CD_LIMIT_CI_CPU: "0.5"
+  CD_LIMIT_CI_MEM: "3G"
+  CD_REQ_CI_CPU: "0.5"
+  CD_REQ_CI_MEM: "1G"
+  CD_NODE_TAINTS_KEY: "dedicated"
+  CD_NODE_LABEL_SELECTOR: "kubernetes.io/os=linux"
+  CD_WORKFLOW_SERVICE_ACCOUNT: "cd-runner"
+  DEFAULT_BUILD_LOGS_KEY_PREFIX: "devtron"
+  DEFAULT_CD_ARTIFACT_KEY_LOCATION: "devtron/cd-artifacts"
+  CD_NODE_TAINTS_VALUE: "ci"
+  CD_ARTIFACT_LOCATION_FORMAT: "%d/%d.zip"
+  DEFAULT_CD_NAMESPACE: "devtron-cd"
+  DEFAULT_CI_IMAGE: {{ include "common.image" (dict "component" $.Values.components.ciRunner "global" $.Values.global ) }}
+  DEFAULT_CD_TIMEOUT: "3600"
+  WF_CONTROLLER_INSTANCE_ID: "devtron-runner"
+  CI_LOGS_KEY_PREFIX: "ci-artifacts"
+  DEFAULT_NAMESPACE: "devtron-ci"
+  DEFAULT_TIMEOUT: "3600"
+  LIMIT_CI_CPU: "0.5"
+  LIMIT_CI_MEM: "3G"
+  REQ_CI_CPU: "0.5"
+  REQ_CI_MEM: "1G"
+  CI_NODE_TAINTS_KEY: ""
+  CI_NODE_TAINTS_VALUE: ""
+  CI_NODE_LABEL_SELECTOR: ""
+  CACHE_LIMIT: "5000000000"
+  DEFAULT_ARTIFACT_KEY_LOCATION: "devtron/ci-artifacts"
+  WORKFLOW_SERVICE_ACCOUNT: "ci-runner"
+  EXTERNAL_CI_PAYLOAD: "{\"ciProjectDetails\":[{\"gitRepository\":\"https://github.com/srj92/getting-started-nodejs.git\",\"checkoutPath\":\"./abc\",\"commitHash\":\"239077135f8cdeeccb7857e2851348f558cb53d3\",\"commitTime\":\"2019-10-31T20:55:21+05:30\",\"branch\":\"master\",\"message\":\"Update README.md\",\"author\":\"Suraj Gupta \"}],\"dockerImage\":\"445808685819.dkr.ecr.us-east-2.amazonaws.com/orch:23907713-2\",\"digest\":\"test1\",\"dataSource\":\"ext\",\"materialType\":\"git\"}"
+  CI_ARTIFACT_LOCATION_FORMAT: "%d/%d.zip"
+  IMAGE_SCANNER_ENDPOINT: "http://image-scanner-service.devtroncd:80"
+  ECR_REPO_NAME_PREFIX: "devtron/"
+  ACD_USERNAME: "admin"
+  DEX_RURL: "http://argocd-dex-server.devtroncd:8080/callback"
+  DEX_URL: "http://argocd-dex-server.devtroncd:5556/dex"
+  CExpirationTime: "600"
+  JwtExpirationTime: "120"
+  ACD_CM: "argocd-cm"
+  ACD_NAMESPACE: "devtroncd"
+  MINIO_ENDPOINT: http://devtron-minio:9000
+  GITOPS_REPO_PREFIX: "devtron"
+  ENFORCER_CACHE: "true"
+  ENFORCER_CACHE_EXPIRATION_IN_SEC: "345600"
+  ENFORCER_MAX_BATCH_SIZE: "1"
+  DEVTRON_SECRET_NAME: "devtron-secret"
   USE_ARTIFACT_LISTING_API_V2: "true"
   RUN_HELM_INSTALL_IN_ASYNC_MODE_HELM_APPS: "true"
   ENABLE_ASYNC_INSTALL_DEVTRON_CHART: "true"
@@ -64,6 +128,10 @@ data:
 {{- if $.Values.monitoring.grafana }}
 {{- if $.Values.monitoring.grafana.enabled }}
   GRAFANA_URL: "http://%s:%s@devtron-grafana.devtroncd/grafana"
+  GRAFANA_HOST: "devtron-grafana.devtroncd"
+  GRAFANA_PORT: "80"
+  GRAFANA_NAMESPACE: "devtroncd"
+  GRAFANA_ORG_ID: "2"
 {{- end }}
 {{- end }}
 {{- end }}
@@ -83,7 +151,23 @@ data:
 {{- if .customOverrides }}
 {{ toYaml .customOverrides | indent 2}}
 {{- end }}
-  DEFAULT_CI_IMAGE: {{ include "common.image" (dict "component" $.Values.components.ciRunner "global" $.Values.global ) }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: devtron-cluster-components
+  labels:
+    release: devtron
+data:
+  rollout.yaml: >-
+    rollout:
+      resources:
+        limits:
+          cpu: 250m
+          memory: 200Mi
+        requests:
+          cpu: 50m
+          memory: 100Mi
 ---
 apiVersion: apps/v1
 kind: Deployment
