--- a/charts/devtron/templates/configmap-secret.yaml
+++ b/charts/devtron/templates/configmap-secret.yaml
@@ -6,18 +6,14 @@
 {{- $DEX_SECRET := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-secret" "Key" "DEX_SECRET") }}
 {{- $DEX_JWTKEY := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-secret" "Key" "DEX_JWTKEY") }}
 {{- $DEX_CSTOREKEY := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-secret" "Key" "DEX_CSTOREKEY") }}
-{{- if $POSTGRES_SECRET := include "checkSecretData" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-operator-secret" "Key" "POSTGRESQL_PASSWORD") }}
-{{- else $POSTGRES_SECRET := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "postgresql-postgresql" "Key" "postgresql-password") }}
-{{- end }}
-{{- if $WEBHOOK_TOKEN := include "checkSecretData" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-operator-secret" "Key" "WEBHOOK_TOKEN") }}
-{{- else $WEBHOOK_TOKEN := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-secret" "Key" "WEBHOOK_TOKEN") }}
-{{- end }}
+{{- $postgresPwd := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "postgresql-postgresql" "Key" "postgresql-password") }}
+{{- $WEBHOOK_TOKEN := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-secret" "Key" "WEBHOOK_TOKEN") }}
 {{- if $.Values.installer.modules }}
 {{- if has "cicd" $.Values.installer.modules }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: devtron-operator-secret 
+  name: devtron-operator-secret
   namespace: devtroncd
 type: Opaque
 data:
@@ -206,7 +202,7 @@ data:
 apiVersion: v1
 kind: Secret
 data:
-  postgresql-password: {{ $POSTGRES_SECRET }}
+  postgresql-password: {{ $postgresPwd }}
   POSTGRES_USER: cG9zdGdyZXM=
   POSTGRES_DB: b3JjaGVzdHJhdG9y
 metadata:
@@ -224,7 +220,7 @@ type: Opaque
 apiVersion: v1
 kind: Secret
 data:
-  DB_PASSWORD: {{ $POSTGRES_SECRET }}
+  DB_PASSWORD: {{ $postgresPwd }}
 metadata:
   name: postgresql-migrator
   labels:
@@ -248,7 +244,7 @@ metadata:
     "helm.sh/hook-weight": "-3"
     "helm.sh/resource-policy": keep
 data:
-  PG_PASSWORD: {{ $POSTGRES_SECRET }}
+  PG_PASSWORD: {{ $postgresPwd }}
   EXTERNAL_CI_API_SECRET: {{ $EXTERNAL_CI_API_SECRET }}
   WEBHOOK_TOKEN: {{ $WEBHOOK_TOKEN }}
   ORCH_TOKEN: {{ $ORCH_TOKEN }}
