--- a/charts/devtron/templates/configmap-secret.yaml
+++ b/charts/devtron/templates/configmap-secret.yaml
@@ -245,12 +245,16 @@ metadata:
     "helm.sh/resource-policy": keep
 data:
   PG_PASSWORD: {{ $postgresPwd }}
+{{- if $.Values.installer.modules }}
+{{- if has "cicd" $.Values.installer.modules }}
   EXTERNAL_CI_API_SECRET: {{ $EXTERNAL_CI_API_SECRET }}
   WEBHOOK_TOKEN: {{ $WEBHOOK_TOKEN }}
   ORCH_TOKEN: {{ $ORCH_TOKEN }}
   DEX_SECRET: {{ $DEX_SECRET }}
   DEX_JWTKEY: {{ $DEX_JWTKEY }}
   DEX_CSTOREKEY: {{ $DEX_CSTOREKEY }}
+{{- end }}
+{{- end }}
 type: Opaque
 ---
 apiVersion: v1
