--- a/charts/devtron/templates/devtron.yaml
+++ b/charts/devtron/templates/devtron.yaml
@@ -25,10 +25,10 @@ data:
   CD_PORT: "80" 
   CD_NAMESPACE: "devtroncd"
   EVENT_URL: "http://notifier-service.devtroncd:80/notify"
-  GIT_SENSOR_URL: "http://git-sensor-service.devtroncd:80"
+  GIT_SENSOR_PROTOCOL: GRPC
+  GIT_SENSOR_URL: "git-sensor-service.devtroncd:90"
   GIT_SENSOR_TIMEOUT: "300"
   LENS_URL: "http://lens-service.devtroncd:80"
-  CASBIN_CLIENT_URL: casbin-service.devtroncd:9000
   LENS_TIMEOUT: "300"
   NATS_SERVER_HOST: "nats://devtron-nats.devtroncd:4222"
   APP: "orchestrator"
@@ -68,7 +68,7 @@ data:
   CACHE_LIMIT: "5000000000"
   DEFAULT_ARTIFACT_KEY_LOCATION: "devtron/ci-artifacts"
   WORKFLOW_SERVICE_ACCOUNT: "ci-runner"
-  EXTERNAL_CI_PAYLOAD: "{\"ciProjectDetails\":[{\"gitRepository\":\"https://github.com/srj92/getting-started-nodejs.git\",\"checkoutPath\":\"./abc\",\"commitHash\":\"239077135f8cdeeccb7857e2851348f558cb53d3\",\"commitTime\":\"2019-10-31T20:55:21+05:30\",\"branch\":\"master\",\"message\":\"Update README.md\",\"author\":\"Suraj Gupta \"}],\"dockerImage\":\"445808685819.dkr.ecr.us-east-2.amazonaws.com/orch:23907713-2\",\"digest\":\"test1\",\"dataSource\":\"ext\",\"materialType\":\"git\"}"
+  EXTERNAL_CI_PAYLOAD: "{\"ciProjectDetails\":[{\"gitRepository\":\"https://github.com/vikram1601/getting-started-nodejs.git\",\"checkoutPath\":\"./abc\",\"commitHash\":\"239077135f8cdeeccb7857e2851348f558cb53d3\",\"commitTime\":\"2022-10-30T20:00:00\",\"branch\":\"master\",\"message\":\"Update README.md\",\"author\":\"User Name \"}],\"dockerImage\":\"445808685819.dkr.ecr.us-east-2.amazonaws.com/orch:23907713-2\"}"
   CI_ARTIFACT_LOCATION_FORMAT: "%d/%d.zip"
   IMAGE_SCANNER_ENDPOINT: "http://image-scanner-service.devtroncd:80"
   ECR_REPO_NAME_PREFIX: "devtron/"
@@ -93,6 +93,14 @@ data:
   IMAGE_SCAN_MAX_RETRIES: "3"
   IMAGE_SCAN_RETRY_DELAY: "5"
   CONSUMER_CONFIG_JSON: '{"DEVTRON-CHART-INSTALL-DURABLE":{"natsMsgProcessingBatchSize":1}}'
+  SKIP_GITOPS_VALIDATION: "false"
+  SKIP_CREATING_ECR_REPO: "false"
+  SCOPED_VARIABLE_ENABLED: "true"
+  SCOPED_VARIABLE_HANDLE_PRIMITIVES: "true"
+  MAX_CI_WORKFLOW_RETRIES: "0"
+  MAX_CD_WORKFLOW_RUNNER_RETRIES: "0"
+  ENABLE_BUILD_CONTEXT: "true"
+  CI_SUCCESS_AUTO_TRIGGER_BATCH_SIZE: "1"
   FEATURE_RESTART_WORKLOAD_BATCH_SIZE: "1"
   FEATURE_RESTART_WORKLOAD_WORKER_POOL_SIZE: "5"
   USE_GIT_CLI: "false"
