--- a/charts/devtron/templates/configmap-secret.yaml
+++ b/charts/devtron/templates/configmap-secret.yaml
@@ -1,6 +1,13 @@
 {{- $grafanaPwd := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-grafana-cred-secret" "Key" "admin-password") }}
 {{- $minioAccessKey := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-minio" "Key" "accesskey") }}
 {{- $minioSecretKey := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-minio" "Key" "secretkey") }}
+{{- $EXTERNAL_CI_API_SECRET := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-secret" "Key" "EXTERNAL_CI_API_SECRET") }}
+{{- $ORCH_TOKEN := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-secret" "Key" "ORCH_TOKEN") }}
+{{- $DEX_SECRET := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-secret" "Key" "DEX_SECRET") }}
+{{- $DEX_JWTKEY := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-secret" "Key" "DEX_JWTKEY") }}
+{{- $DEX_CSTOREKEY := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-secret" "Key" "DEX_CSTOREKEY") }}
+{{- $postgresPwd := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "postgresql-postgresql" "Key" "postgresql-password") }}
+{{- $WEBHOOK_TOKEN := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "devtron-secret" "Key" "WEBHOOK_TOKEN") }}
 {{- if $.Values.installer.modules }}
 {{- if has "cicd" $.Values.installer.modules }}
 apiVersion: v1
@@ -192,11 +199,10 @@ data:
 {{- end }}
 {{- end }}
 ---
-{{- $Secret := include "getOrGeneratePass" (dict "Namespace" "devtroncd" "Kind" "Secret" "Name" "postgresql-postgresql" "Key" "postgresql-password") }}
 apiVersion: v1
 kind: Secret
 data:
-  postgresql-password: {{ $Secret }}
+  postgresql-password: {{ $postgresPwd }}
   POSTGRES_USER: cG9zdGdyZXM=
   POSTGRES_DB: b3JjaGVzdHJhdG9y
 metadata:
@@ -214,7 +220,7 @@ type: Opaque
 apiVersion: v1
 kind: Secret
 data:
-  DB_PASSWORD: {{ $Secret }}
+  DB_PASSWORD: {{ $postgresPwd }}
 metadata:
   name: postgresql-migrator
   labels:
@@ -238,7 +244,17 @@ metadata:
     "helm.sh/hook-weight": "-3"
     "helm.sh/resource-policy": keep
 data:
-  PG_PASSWORD: {{ $Secret }}
+  PG_PASSWORD: {{ $postgresPwd }}
+{{- if $.Values.installer.modules }}
+{{- if has "cicd" $.Values.installer.modules }}
+  EXTERNAL_CI_API_SECRET: {{ $EXTERNAL_CI_API_SECRET }}
+  WEBHOOK_TOKEN: {{ $WEBHOOK_TOKEN }}
+  ORCH_TOKEN: {{ $ORCH_TOKEN }}
+  DEX_SECRET: {{ $DEX_SECRET }}
+  DEX_JWTKEY: {{ $DEX_JWTKEY }}
+  DEX_CSTOREKEY: {{ $DEX_CSTOREKEY }}
+{{- end }}
+{{- end }}
 type: Opaque
 ---
 apiVersion: v1
