--- a/scripts/devtron-reference-helm-charts/statefulset-chart_5-1-0/templates/prometheusrules.yaml
+++ b/scripts/devtron-reference-helm-charts/statefulset-chart_5-1-0/templates/prometheusrules.yaml
@@ -26,7 +26,7 @@ spec:
     {{- if $.Values.prometheusRule.name }}
     - name: {{ $.Values.prometheusRule.name }}
     {{- else }}
-    - name: {{ template ".Chart.Name .fullname" . }}
+    - name: {{ template ".Chart.Name .fullname" $ }}
     {{- end }}
       rules: {{- toYaml . | nindent 6 }}
   {{- end }}
