--- a/scripts/devtron-reference-helm-charts/statefulset-chart_5-1-0/test_values.yaml
+++ b/scripts/devtron-reference-helm-charts/statefulset-chart_5-1-0/test_values.yaml
@@ -123,6 +123,11 @@ autoscaling:
 #        targetAverageValue: "2"
 #      type: External
 #
+
+customPodLabels:
+  release: lq1952
+
+
 EnvVariablesFromSecretKeys: 
   - name: ENV_NAME
     secretName: SECRET_NAME
