--- a/scripts/devtron-reference-helm-charts/deployment-chart_4-19-0/values.yaml
+++ b/scripts/devtron-reference-helm-charts/deployment-chart_4-19-0/values.yaml
@@ -167,6 +167,8 @@ service:
   annotations: {}
     # test1: test2
     # test3: test4
+  sessionAffinity:
+    enabled: false  
 
 istio:
   enable: false
@@ -584,15 +586,18 @@ initContainers: []
   # # This will assign your application's docker image to init container.
   #   reuseContainerImage: true
 
-containers: []
+containers: 
   ## Additional init containers to run before the Scheduler pods.
   ## for example, be used to run a sidecar that chown Logs storage .
-  #- name: volume-mount-hack
-  #  image: busybox
-  #  command: ["sh", "-c", "chown -R 1000:1000 logs"]
-  #  volumeMounts:
-  #    - mountPath: /usr/local/airflow/logs
-  #      name: logs-data
+ - name: volume-mount-hack
+   image: busybox
+   command: ["sh", "-c", "chown -R 1000:1000 logs"]
+   volumeMounts:
+     - mountPath: /usr/local/airflow/logs
+       name: logs-data
+   envFrom:
+   - configMapRef:
+        name: kamal    
 
 
 rawYaml: []
@@ -703,4 +708,4 @@ tolerations: []
 imagePullSecrets: []
   # - test1
   # - test2
-peristentVolumeClaim: {}
+persistentVolumeClaim: {}
