--- a/scripts/devtron-reference-helm-charts/reference-chart_4-19-0/templates/service.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-19-0/templates/service.yaml
@@ -48,6 +48,16 @@ spec:
       {{- end }}
   selector:
     app: {{ template ".Chart.Name .name" . }}
+{{- if .Values.service.sessionAffinity.enabled }}    
+  sessionAffinity: ClientIP
+{{- end }}   
+{{- if .Values.service.sessionAffinityConfig }}    
+  sessionAffinityConfig:
+{{ toYaml .Values.service.sessionAffinityConfig | indent 4 }}  
+{{- end }}  
+
+     
+
 {{- if eq .Values.deploymentType "BLUE-GREEN" }}
 ---
 apiVersion: v1
