--- a/scripts/devtron-reference-helm-charts/reference-chart_4-19-0/values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-19-0/values.yaml
@@ -137,6 +137,10 @@ service:
   annotations: {}
     # test1: test2
     # test3: test4
+  sessionAffinity:
+    enabled: false
+  sessionAffinityConfig: {}
+   
 
 server:
  deployment:
